# grblhal_tft_plugin

./: .gitmodules  Arduino.h  CMakeLists.txt  Print.h  QUICK_START.md  README.md  User_Setup.h  arduino_compat.h  lv_conf.h  lvgl_init.cpp  lvgl_init.h  tft_config.h  tft_driver.cpp  tft_driver.h  tft_interface.c  tft_interface.h  tft_plugin.c  tft_plugin.h
lib/: lv_conf.h
